--- a/frontend/frontend/src/components/Footer/Footer.css
+++ b/frontend/frontend/src/components/Footer/Footer.css
@@ -31,7 +31,7 @@
     padding: .25rem;
     max-width: 225px;
     text-align: left;
-    text-wrap: balance;
+    text-wrap: pretty;
     
     
 
