--- a/frontend/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/frontend/src/components/Navbar/Navbar.css
@@ -10,7 +10,7 @@
   
   .logo-wrapper {
     object-fit: cover;
-    padding: .5rem;
+    padding: .75rem;
   
   }
   
