--- a/frontend/frontend/src/components/TestimonialsCarousel/TestimonialsCarousel.css
+++ b/frontend/frontend/src/components/TestimonialsCarousel/TestimonialsCarousel.css
@@ -1,7 +1,8 @@
 
 
 .carousel {
-    min-width: 100%;
+    /* min-width: 100%; */
+    width: 100%;
 
     position: relative;
     min-height: 30rem;
@@ -19,45 +20,45 @@
     display: grid;
     grid-template-columns: 1fr;
 
-
-    min-width: 100%;
     min-height: 20rem;
 
     position: relative;
+    
 }
 
 
 
 .carousel-slide {
- 
-    max-width: 85%;
+
 
 
     margin: 0 auto 0 auto;
     padding: 0;
+    width: 100%;
 
     display: flex;
     align-items: center;
-    /* border: 3px solid purple; */
 
 }
 
 .carousel .carousel-item li {
     /* border: 1px solid yellow; */
-
-    padding: 1rem;
-    min-width: 100%;
+    min-width: fit-content;
+    width: 100%;
  
     
 }
 
 .carousel-item li * {
     /* border: 1px solid red; */
-    display: block;
+    display: flex;
     width: 100%;
     font-size: clamp(var(--fs-twentyFour), 1.5vw, var(--fs-twentyFour));
     color: white;
-    text-align: center;
+    text-align: justify;
+    text-wrap: pretty;
+    justify-content: center;
+
 
     
 }
